fix for TFJ-9 removed Commons-Codec dependency.
git-svn-id: http://yusuke.homeip.net/svn/twitter4j/trunk@39 117b7e0d-5933-0410-9d29-ab41bb01d86b